--- a/JayathilakaPosBackedWithPrinter/pom.xml
+++ b/JayathilakaPosBackedWithPrinter/pom.xml
@@ -46,6 +46,7 @@
 <!--			<artifactId>mysql-connector-j</artifactId>-->
 <!--			<scope>runtime</scope>-->
 <!--		</dependency>-->
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -59,6 +60,28 @@
 			<version>2.1.4</version>
 		</dependency>
 
+
+
+<!--		<dependency>-->
+<!--			<groupId>com.itextpdf</groupId>-->
+<!--			<artifactId>itext7-core</artifactId>-->
+<!--			<version>7.1.12</version>-->
+<!--		</dependency>-->
+
+
+		<!-- https://mvnrepository.com/artifact/com.itextpdf/itextpdf -->
+<!--		<dependency>-->
+<!--			<groupId>com.itextpdf</groupId>-->
+<!--			<artifactId>itextpdf</artifactId>-->
+<!--			<version>5.5.13.3</version>-->
+<!--		</dependency>-->
+
+
+<!--		<dependency>-->
+<!--			<groupId>javax.print</groupId>-->
+<!--			<artifactId>javax.print-api</artifactId>-->
+<!--			<version>1.0</version>-->
+<!--		</dependency>-->
 
 	</dependencies>
 
