--- a/JayathilakaPosBackedWithPrinter/pom.xml
+++ b/JayathilakaPosBackedWithPrinter/pom.xml
@@ -83,6 +83,22 @@
 <!--			<version>1.0</version>-->
 <!--		</dependency>-->
 
+		<dependency>
+			<groupId>org.usb4java</groupId>
+			<artifactId>usb4java-javax</artifactId>
+			<version>1.3.0</version>
+		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>javax.usb</groupId>-->
+<!--			<artifactId>javax-usb-api</artifactId>-->
+<!--			<version>1.0.2</version>-->
+<!--		</dependency>-->
+		<dependency>
+			<groupId>org.apache.pdfbox</groupId>
+			<artifactId>pdfbox</artifactId>
+			<version>2.0.24</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
