--- a/JayathilakaPosBackedWithPrinter/src/main/resources/application.properties
+++ b/JayathilakaPosBackedWithPrinter/src/main/resources/application.properties
@@ -1,1 +1,25 @@
 spring.application.name=JayathilakaPosBackedWithPrinter
+spring.datasource.url=jdbc:mysql://localhost:3306/JayathikaRice_System?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=localhost
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql:true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#this enable error messages send with response
+server.error.include-message=always
+
+#Format SQL in spring data JPA
+spring.jpa.properties.hibernate.format_sql=true
+
+#Change Server Port
+server.port=8085
+
+
+
+
+
+
+
+
