calculate salary done

--- a/JayathilakaPosBackedWithPrinter/src/main/resources/application.properties
+++ b/JayathilakaPosBackedWithPrinter/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 server.error.include-message=always
 
 #Format SQL in spring data JPA
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.format_sql=true
 
 #Change Server Port
 server.port=8085
