paysheet coordinate config done

--- a/JayathilakaPosBackedWithPrinter/src/main/resources/application.properties
+++ b/JayathilakaPosBackedWithPrinter/src/main/resources/application.properties
@@ -16,6 +16,8 @@ server.error.include-message=always
 #Change Server Port
 server.port=8085
 
+##### pdf template location ##########
+pdfLocationAbsPath = "/home/rashmika/Paid Projects/JayathilakaRiceProducts_With printer/PaysheetPrinter_JayathilakaRiceProducts/paysheet_template.pdf"
 
 
 
